make app return random picture related to activity

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main class="wrapper main-width-scaler">
         <div id="activity-phrase">
-            Fix this web app. Something went wrong :(
+            Fix this web app.
         </div>
     </main>
     <script src="main.js"></script>
