add working image search functionality

--- a/index.html
+++ b/index.html
@@ -12,19 +12,22 @@
     <link rel="icon" href="favicon.png">
     <title>Get Random Activity</title>
 </head>
-<body id="activity-image">
-    <header>
-        <nav class="main-width-scaler">
-            <div class="nav-right-links">
-                <a id="button-get-new-word">Get Random Activity</a>
+<body>
+    <div id="activity-image"></div>
+    <div id="text-content">
+        <header>
+            <nav class="main-width-scaler">
+                <div class="nav-right-links">
+                    <a id="button-get-new-word">Get Random Activity</a>
+                </div>
+            </nav>
+        </header>
+        <main class="wrapper main-width-scaler">
+            <div id="activity-phrase">
+                Fix this web app
             </div>
-        </nav>
-    </header>
-    <main class="wrapper main-width-scaler">
-        <div id="activity-phrase">
-            Fix this web app.
-        </div>
-    </main>
+        </main>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
