update description metatag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Jun Huang">
-    <meta name="description" content="Get Random Activity">
+    <meta name="description" content="Simple HTML/CSS/JS web app that calls from 2 separate APIs to return a random activity and a related background image.">
     <meta name="keywords" content="web,front-end,full-stack,application,html,css,js,javascript,api,mobile,rwd,responsive">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
